# openstudio-enums-refactor

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
src/: main.cpp
src/generateiddfactory/: CMakeLists.txt  IddEnums.hxx  IddEnums_new.hxx  IddFactory.cxx  IddFactory.hxx
src/lib/: CMakeLists.txt
src/model/: CMakeLists.txt  DefaultScheduleSet.cpp  DefaultScheduleSet.hpp  ModelAPI.hpp  ModelObject.cpp  ModelObject.hpp
src/model/generate_classes/: generate_classes.py  template.cpp.j2  template.hpp.j2
src/utilities/: CMakeLists.txt  UtilitiesAPI.hpp
src/utilities/bcl/: BCLEnums.hpp
src/utilities/core/: ASCIIStrings.hpp  Enum.hpp  EnumBase.hpp
src/utilities/idd/: IddEnums.hpp
